load("@gazelle//:def.bzl", "gazelle")
load("@rules_go//go:def.bzl", "go_library", "go_test")

gazelle(
    name = "gazelle",
)

go_library(
    name = "cobra",
    srcs = [
        "active_help.go",
        "args.go",
        "bash_completions.go",
        "bash_completionsV2.go",
        "cobra.go",
        "command.go",
        "command_notwin.go",
        "command_win.go",
        "completions.go",
        "fish_completions.go",
        "flag_groups.go",
        "powershell_completions.go",
        "shell_completions.go",
        "zsh_completions.go",
    ],
    importpath = "github.com/spf13/cobra",
    visibility = ["//visibility:public"],
    deps = [
        "@com_github_spf13_pflag//:pflag",
    ] + select({
        "@rules_go//go/platform:windows": [
            "@com_github_inconshreveable_mousetrap//:mousetrap",
        ],
        "//conditions:default": [],
    }),
)

go_test(
    name = "cobra_test",
    srcs = [
        "active_help_test.go",
        "args_test.go",
        "bash_completionsV2_test.go",
        "bash_completions_test.go",
        "cobra_test.go",
        "command_test.go",
        "completions_test.go",
        "fish_completions_test.go",
        "flag_groups_test.go",
        "powershell_completions_test.go",
        "zsh_completions_test.go",
    ],
    embed = [":cobra"],
    deps = ["@com_github_spf13_pflag//:pflag"],
)
