bazel_dep(name = "rules_go", version = "0.48.0")
bazel_dep(name = "gazelle", version = "0.38.0")

go_sdk = use_extension("@rules_go//go:extensions.bzl", "go_sdk")
go_sdk.download(version = "1.22.0")

go_deps = use_extension("@gazelle//:extensions.bzl", "go_deps")
go_deps.from_file(
    go_mod = "//:go.mod",
)
use_repo(go_deps, "com_github_cpuguy83_go_md2man_v2", "com_github_inconshreveable_mousetrap", "com_github_spf13_pflag", "in_gopkg_yaml_v3")
