load("@rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "doc",
    srcs = [
        "man_docs.go",
        "md_docs.go",
        "rest_docs.go",
        "util.go",
        "yaml_docs.go",
    ],
    importpath = "github.com/spf13/cobra/doc",
    visibility = ["//visibility:public"],
    deps = [
        "//:cobra",
        "@com_github_cpuguy83_go_md2man_v2//md2man",
        "@com_github_spf13_pflag//:pflag",
        "@in_gopkg_yaml_v3//:yaml_v3",
    ],
)

go_test(
    name = "doc_test",
    srcs = [
        "cmd_test.go",
        "man_docs_test.go",
        "man_examples_test.go",
        "md_docs_test.go",
        "rest_docs_test.go",
        "yaml_docs_test.go",
    ],
    embed = [":doc"],
    deps = ["//:cobra"],
)
